# ErrorAnalysis

./: .gitignore  CMakeList.txt  CMakeLists.txt  ErrorAnalysis.cpp  ErrorAnalysis.h  Makefile  README.md  test.cpp
.github/ISSUE_TEMPLATE/: documentation_info.md  feature_request.md
include/: ErrorAnalysis.h
src/: ErrorAnalysis.cpp
